test_outputs/connlist/exposure_test_conn_to_all_pods_in_a_new_ns_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Allowed) due to the system default (Allow all)
		INGRESS DIRECTION (Denied)
			[NP] hello-world/allow-ingress-to-unknown-ns // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Denied)
			[NP] hello-world/allow-ingress-to-unknown-ns // Egress (captured but not selected by any Egress rule)
		INGRESS DIRECTION (Allowed) due to the system default (Allow all)


Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	backend/[all pods] : TCP 8050
